--- a/index.html
+++ b/index.html
@@ -4,13 +4,32 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <script
-  src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+  src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="js/app.js"> </script>
     <title></title>
   </head>
   <body>
+    <div id="container">
+    <button id="myBtn">click me!</button>
+    </div>
 
-    <script type="text/javascript" src="js/app.js">
+    <section class="foodsAndDrinks">
+    <h1>Drinks</h1>
+    <ul id="drinks"></ul>
+    <h1>Foods</h1>
+    <ul id="foods"></ul>
+    <input type="text" id="foodInput">
 
-    </script>
+    <button id="addFood">add food</button>
+    <input type="text" id="drinkInput">
+    <button id="addDrink">add drinks</button>
+
+</section>
+
+
+
+
+
+
   </body>
 </html>
